--- a/20240222_himono_html.html
+++ b/20240222_himono_html.html
@@ -21,9 +21,9 @@
     <main>
         <img src="../img/mv.png" alt="画像">
         <p class="">最新のテクノロジーで
-            <strong class="">
+            <em class="">
                 社会課題
-            </strong>
+            </em>
             を解決
         </p>
         <h2 class="">会社概要</h2>
