--- a/20240222_himono_html.html
+++ b/20240222_himono_html.html
@@ -19,7 +19,7 @@
     </header>
 
     <main>
-        <img src="../img/mv.png" alt="画像">
+        <img src="./img/mv.png" alt="画像">
         <p class="">最新のテクノロジーで
             <em class="">
                 社会課題
